# rishacha.github.io

./: .gitignore  .nojekyll  404.html  652a4af202c5a742b8bef5fb84d1d4f355a4b27d-9940693756712aea427f.js  652a4af202c5a742b8bef5fb84d1d4f355a4b27d-9940693756712aea427f.js.map  README.md  _quarto.yml  about.html  about.qmd  app-6ff6ba1599c1b8c7b195.js  app-6ff6ba1599c1b8c7b195.js.map  app-a32560bc1a09eeb052f6.js  app-a32560bc1a09eeb052f6.js.map  chunk-manifest.json  chunk-map.json  commons-9a917f1ea6d8bd212f4b.js  commons-9a917f1ea6d8bd212f4b.js.map  component---src-layouts-index-js-0fe88b0e91dc4ac66aab.js  component---src-layouts-index-js-0fe88b0e91dc4ac66aab.js.map  component---src-pages-404-js-29a34e615690c3237670.js  component---src-pages-404-js-29a34e615690c3237670.js.map  component---src-pages-elements-js-b30ee53c2f27342ddcc6.js  component---src-pages-elements-js-b30ee53c2f27342ddcc6.js.map  component---src-pages-generic-js-0fa5e75c797fbcb68db4.js  component---src-pages-generic-js-0fa5e75c797fbcb68db4.js.map  component---src-pages-index-js-4d33eeb3d90999cf0bb7.js  component---src-pages-index-js-4d33eeb3d90999cf0bb7.js.map  component---src-pages-landing-js-9b0e606959d364e7b14e.js  component---src-pages-landing-js-9b0e606959d364e7b14e.js.map  component---src-pages-new-page-js-e6368b5e95be6e8ea855.js  component---src-pages-new-page-js-e6368b5e95be6e8ea855.js.map  component---src-templates-blog-post-js-b6d7c593af478a65a1df.js  component---src-templates-blog-post-js-b6d7c593af478a65a1df.js.map  index.html  index.qmd  listings.json  path----752f243c4de51ea0580a.js  (+19 more)
(+20 files in other folders)
