[project]
name = "rishacha.github.io"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Rishabh Chakrabarti", email = "rishacha.dev@gmail.com"},
]
dependencies = [
    "jupyter",
    "numpy",
    "pandas",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
